--- a/w3.ipynb
+++ b/w3.ipynb
@@ -1,1 +1,255 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "dec14c90",
+   "metadata": {},
+   "source": [
+    "# Fibonacci Numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef524b9c",
+   "metadata": {},
+   "source": [
+    "### Using Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2eed3a87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n",
+      "89\n",
+      "144\n",
+      "233\n",
+      "377\n",
+      "610\n",
+      "987\n",
+      "1597\n",
+      "2584\n",
+      "4181\n"
+     ]
+    }
+   ],
+   "source": [
+    "prev2 = 0\n",
+    "prev1 = 1\n",
+    "\n",
+    "print(prev2)\n",
+    "print(prev1)\n",
+    "for fibo in range(18):\n",
+    "    newFibo = prev1 + prev2\n",
+    "    print(newFibo)\n",
+    "    prev2 = prev1\n",
+    "    prev1 = newFibo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bc32d47",
+   "metadata": {},
+   "source": [
+    "### Using Recursion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7fc3acd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n",
+      "89\n",
+      "144\n",
+      "233\n",
+      "377\n",
+      "610\n",
+      "987\n",
+      "1597\n",
+      "2584\n",
+      "4181\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0)\n",
+    "print(1)\n",
+    "count = 2\n",
+    "\n",
+    "def fibonacci(prev1, prev2):\n",
+    "    global count\n",
+    "    if count <= 19:\n",
+    "        newFibo = prev1 + prev2\n",
+    "        print(newFibo)\n",
+    "        prev2 = prev1\n",
+    "        prev1 = newFibo\n",
+    "        count += 1\n",
+    "        fibonacci(prev1, prev2)\n",
+    "    else:\n",
+    "        return\n",
+    "\n",
+    "fibonacci(1,0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43871d04",
+   "metadata": {},
+   "source": [
+    "### Find $n^{th}$ number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a2ce74c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "832040\n"
+     ]
+    }
+   ],
+   "source": [
+    "def F(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    else:\n",
+    "        return F(n - 1) + F(n - 2)\n",
+    "\n",
+    "print(F(30))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92b00432",
+   "metadata": {},
+   "source": [
+    "# Arrays"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34d7829f",
+   "metadata": {},
+   "source": [
+    "### Find lowest value using Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0f1cb553",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lowest value:  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = [64, 34, 25, 12, 22, 11, 90, 5]\n",
+    "minVal = my_array[0]\n",
+    "\n",
+    "for i in my_array:\n",
+    "    if i < minVal:\n",
+    "        minVal = i\n",
+    "        \n",
+    "print('Lowest value: ',minVal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cd70e20",
+   "metadata": {},
+   "source": [
+    "### Bubble Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "abfe0280",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [5, 11, 12, 22, 25, 34, 64, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = [64, 34, 25, 12, 22, 11, 90, 5]\n",
+    "\n",
+    "n = len(my_array)\n",
+    "for i in range(n-1):\n",
+    "    for j in range(n-i-1):\n",
+    "        if my_array[j] > my_array[j+1]:\n",
+    "            my_array[j], my_array[j+1] = my_array[j+1], my_array[j]\n",
+    "\n",
+    "print(\"Sorted array:\", my_array)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
