--- a/w3.ipynb
+++ b/w3.ipynb
@@ -201,12 +201,12 @@
    "id": "5cd70e20",
    "metadata": {},
    "source": [
-    "### Bubble Sort"
+    "## Bubble Sort"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "abfe0280",
    "metadata": {},
    "outputs": [
@@ -228,6 +228,60 @@
     "            my_array[j], my_array[j+1] = my_array[j+1], my_array[j]\n",
     "\n",
     "print(\"Sorted array:\", my_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3001a87f",
+   "metadata": {},
+   "source": [
+    "### Bubble Sort improvement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "77cf2a7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [3, 7, 9, 11, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = [7, 3, 9, 12, 11]\n",
+    "\n",
+    "n = len(my_array)\n",
+    "for i in range(n-1):\n",
+    "    swapped = False\n",
+    "    for j in range(n-i-1):\n",
+    "        if my_array[j] > my_array[j+1]:\n",
+    "            my_array[j], my_array[j+1] = my_array[j+1], my_array[j]\n",
+    "            swapped = True\n",
+    "    if not swapped:\n",
+    "        break\n",
+    "\n",
+    "print(\"Sorted array:\", my_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e675bc4b",
+   "metadata": {},
+   "source": [
+    "### Time Complexity of Bubble Sort: $O(n^2)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b584a7f0",
+   "metadata": {},
+   "source": [
+    "## Selection Sort"
    ]
   }
  ],
