--- a/w3.ipynb
+++ b/w3.ipynb
@@ -283,6 +283,45 @@
    "source": [
     "## Selection Sort"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "01c63135",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [5, 11, 12, 22, 25, 34, 64, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = [64, 34, 25, 5, 22, 11, 90, 12]\n",
+    "\n",
+    "n = len(my_array)\n",
+    "for i in range(n-1):\n",
+    "    min_index = i\n",
+    "    for j in range(i+1, n):\n",
+    "        if my_array[j] < my_array[min_index]:\n",
+    "            min_index = j\n",
+    "    min_value = my_array.pop(min_index)\n",
+    "    my_array.insert(i, min_value)\n",
+    "\n",
+    "print(\"Sorted array:\", my_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a902194",
+   "metadata": {},
+   "source": [
+    "<p align=\"center\">\n",
+    "    <img src=\"img/time_complexity.png\" alt=\"example\" width=\"200\">\n",
+    "</p>"
+   ]
   }
  ],
  "metadata": {
