--- a/w3.ipynb
+++ b/w3.ipynb
@@ -18,37 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2eed3a87",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "5\n",
-      "8\n",
-      "13\n",
-      "21\n",
-      "34\n",
-      "55\n",
-      "89\n",
-      "144\n",
-      "233\n",
-      "377\n",
-      "610\n",
-      "987\n",
-      "1597\n",
-      "2584\n",
-      "4181\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prev2 = 0\n",
     "prev1 = 1\n",
@@ -318,9 +291,55 @@
    "id": "3a902194",
    "metadata": {},
    "source": [
+    "### Selection Sort improvement\n",
+    "\n",
+    "Each time the next lowest value array element is removed, all following elements must be shifted one place down to make up for the removal.\n",
+    "\n",
     "<p align=\"center\">\n",
-    "    <img src=\"img/time_complexity.png\" alt=\"example\" width=\"200\">\n",
+    "    <img src=\"img/SS1.png\" alt=\"example\" width=\"200\">\n",
+    "</p>\n",
+    "\n",
+    "</br>\n",
+    "After the lowest value (5) is found and removed, it is inserted at the start of the array, causing all following values to shift one position up to make space for the new value, like the image below shows.\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "    <img src=\"img/SS2.png\" alt=\"example\" width=\"200\">\n",
+    "</p>\n",
+    "\n",
+    "</br>\n",
+    "Instead of all the shifting, swap the lowest value (5) with the first value (64).\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "    <img src=\"img/SS3.png\" alt=\"example\" width=\"200\">\n",
     "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "84f06537",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [5, 11, 12, 22, 25, 34, 64, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = [64, 34, 25, 12, 22, 11, 90, 5]\n",
+    "\n",
+    "n = len(my_array)\n",
+    "for i in range(n):\n",
+    "    min_index = i\n",
+    "    for j in range(i+1, n):\n",
+    "        if my_array[j] < my_array[min_index]:\n",
+    "            min_index = j   \n",
+    "    my_array[i], my_array[min_index] = my_array[min_index], my_array[i]\n",
+    "\n",
+    "print(\"Sorted array:\", my_array)"
    ]
   }
  ],
