--- a/w3.ipynb
+++ b/w3.ipynb
@@ -246,7 +246,9 @@
    "id": "e675bc4b",
    "metadata": {},
    "source": [
-    "### Time Complexity of Bubble Sort: $O(n^2)$"
+    "### Time Complexity of Bubble Sort: $O(n^2)$\n",
+    "\n",
+    "The best case scenario is $O(n)$"
    ]
   },
   {
@@ -341,6 +343,24 @@
     "\n",
     "print(\"Sorted array:\", my_array)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0a1f2eb",
+   "metadata": {},
+   "source": [
+    "### Time Complexity of Selection Sort: $O(n^2)$\n",
+    "\n",
+    "The best and the worst case scenario is always almost $O(n^2)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f34973d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
