--- a/w3_schools.ipynb
+++ b/w3_schools.ipynb
@@ -18,10 +18,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2eed3a87",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n",
+      "89\n",
+      "144\n",
+      "233\n",
+      "377\n",
+      "610\n",
+      "987\n",
+      "1597\n",
+      "2584\n",
+      "4181\n"
+     ]
+    }
+   ],
    "source": [
     "prev2 = 0\n",
     "prev1 = 1\n",
@@ -106,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "a2ce74c2",
    "metadata": {},
    "outputs": [
@@ -146,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "0f1cb553",
    "metadata": {},
    "outputs": [
@@ -179,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "abfe0280",
    "metadata": {},
    "outputs": [
@@ -213,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "77cf2a7a",
    "metadata": {},
    "outputs": [
@@ -261,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "01c63135",
    "metadata": {},
    "outputs": [
@@ -293,7 +320,11 @@
    "id": "3a902194",
    "metadata": {},
    "source": [
+    "<a id=\"memory-shift\"></a>\n",
+    "\n",
     "### Selection Sort improvement\n",
+    "\n",
+    "* For dynamically typed languages (python, javascipt, ...)</br>\n",
     "\n",
     "Each time the next lowest value array element is removed, all following elements must be shifted one place down to make up for the removal.\n",
     "\n",
@@ -313,12 +344,16 @@
     "\n",
     "<p align=\"center\">\n",
     "    <img src=\"img/SS3.png\" alt=\"example\" width=\"200\">\n",
-    "</p>"
+    "</p>\n",
+    "\n",
+    "* For statically typed language (Java, C++)</br>\n",
+    "\n",
+    "Since, the memory is pre-defined in these languages, we don't come up with memory shifting problems.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "84f06537",
    "metadata": {},
    "outputs": [
@@ -355,12 +390,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "911d3584",
+   "metadata": {},
+   "source": [
+    "## Insertion Sort"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6f34973d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted array: [5, 11, 12, 22, 25, 34, 64, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = [64, 34, 25, 12, 22, 11, 90, 5]\n",
+    "\n",
+    "n = len(my_array)\n",
+    "for i in range(1,n):\n",
+    "    insert_index = i\n",
+    "    current_value = my_array.pop(i)\n",
+    "    for j in range(i-1, -1, -1):\n",
+    "        if my_array[j] > current_value:\n",
+    "            insert_index = j\n",
+    "    my_array.insert(insert_index, current_value)\n",
+    "\n",
+    "print(\"Sorted array:\", my_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c1b187b",
+   "metadata": {},
+   "source": [
+    "### Insertion Sort improvement\n",
+    "\n",
+    "It has the same memory shift issue discussed [earlier](#memory-shift).\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
